# GP2-Engine-Gameplay

./: .gitignore  CMakeLists.txt  DK_ReadMe.txt  ProjectGuide.txt  clean.bat  run.bat
Editor/: CMakeLists.txt  Editor.hpp  editor_layout.ini
Editor/Core/: EditorEvents.hpp  EditorInitializer.cpp  EditorInitializer.hpp  main.cpp
Editor/DebugRender/: EditorDebugRenderer.cpp  EditorDebugRenderer.hpp
Editor/Dialogs/: EditorDialogs.cpp  EditorDialogs.hpp  FileDialog.cpp  FileDialog.hpp
Editor/Input/: EditorInputHandler.cpp  EditorInputHandler.hpp
Editor/Panels/: AssetBrowser.cpp  AssetBrowser.hpp  ConsolePanel.cpp  ConsolePanel.hpp  ContentEditorUI.cpp  ContentEditorUI.hpp  ControlsPanel.cpp  ControlsPanel.hpp  FontPicker.cpp  FontPicker.hpp  SpriteEditor.cpp  SpriteEditor.hpp  TexturePicker.cpp  TexturePicker.hpp
Editor/PlayMode/: HollowsPlayMode.cpp  HollowsPlayMode.hpp  PlayModeManager.cpp  PlayModeManager.hpp
Editor/Scene/: SceneManager.cpp  SceneManager.hpp
Editor/UI/: EditorMenuBar.cpp  EditorMenuBar.hpp  EditorViewport.cpp  EditorViewport.hpp
Engine/: CMakeLists.txt  Engine.hpp
Engine/AI/: AISystem.cpp  AISystem.hpp
Engine/Audio/: AudioComponent.cpp  AudioComponent.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioErrorHandler.cpp  AudioErrorHandler.hpp
Engine/Core/: Application.cpp  Application.hpp  EventSystem.hpp  Events.hpp  Input.cpp  Input.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  Profiler.cpp  Profiler.hpp  SystemManager.cpp  SystemManager.hpp  Time.cpp  Time.hpp
Engine/ECS/: Component.hpp  ComponentStorage.hpp  Entity.hpp  Registry.hpp  Systems.cpp  Systems.hpp
Engine/Graphics/: AnimationHelpers.hpp  Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  Font.cpp  Font.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
Engine/Math/: MathUtils.cpp  MathUtils.hpp  Matrix3x3.cpp  Matrix3x3.hpp  Vector2D.cpp  Vector2D.hpp
Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
Engine/Resources/: ResourceManager.cpp  ResourceManager.hpp
Engine/Serialization/: ConfigLoader.cpp  ConfigLoader.hpp  ISerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp
Engine/TileMap/: LevelEditor.cpp  LevelEditor.hpp  TileMap.cpp  TileMap.hpp  TileRenderer.cpp  TileRenderer.hpp
Engine/UI/: MainMenu.cpp  MainMenu.h
Sandbox/: CMakeLists.txt
Sandbox/Hollows/: DebugLogic.cpp  DebugLogic.hpp  DebugUI.cpp  DebugUI.h  GameInitializer.cpp  GameInitializer.hpp  GameLayer.cpp  GameLayer.hpp  PlayerController.cpp  PlayerController.hpp  main.cpp
Sandbox/assets/configs/: game_config.json
Sandbox/assets/scenes/: main_menu.json  stress_test_scene.json  test1.json  test2.json
Sandbox/assets/textures/: SS_Idle.png.meta.json  SS_Monster_Side_Horizontal.png.meta.json  SS_Walk_Horizontal.png.meta.json  SS_Walk_Up_01.png.meta.json  SS_Walk_Vertical.png.meta.json  tilemap.txt
cmake/: ImportDependencies.cmake
lib/Freetype/: freetype.lib
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
