project(Editor LANGUAGES C CXX)

# Editor files by directory 
file(GLOB_RECURSE EDITOR_CORE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp")
file(GLOB_RECURSE EDITOR_CORE_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Core/*.hpp")

file(GLOB_RECURSE EDITOR_PANELS_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Panels/*.cpp")
file(GLOB_RECURSE EDITOR_PANELS_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Panels/*.hpp")

file(GLOB_RECURSE EDITOR_UI_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/UI/*.cpp")
file(GLOB_RECURSE EDITOR_UI_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/UI/*.hpp")

file(GLOB_RECURSE EDITOR_SCENE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Scene/*.cpp")
file(GLOB_RECURSE EDITOR_SCENE_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Scene/*.hpp")

file(GLOB_RECURSE EDITOR_PLAYMODE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/PlayMode/*.cpp")
file(GLOB_RECURSE EDITOR_PLAYMODE_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/PlayMode/*.hpp")

file(GLOB_RECURSE EDITOR_INPUT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Input/*.cpp")
file(GLOB_RECURSE EDITOR_INPUT_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Input/*.hpp")

file(GLOB_RECURSE EDITOR_DEBUG_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/DebugRender/*.cpp")
file(GLOB_RECURSE EDITOR_DEBUG_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/DebugRender/*.hpp")

file(GLOB_RECURSE EDITOR_DIALOGS_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Dialogs/*.cpp")
file(GLOB_RECURSE EDITOR_DIALOGS_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Dialogs/*.hpp")

# Combine all Editor files
set(EDITOR_SOURCES
    ${EDITOR_CORE_SOURCES} ${EDITOR_PANELS_SOURCES} ${EDITOR_UI_SOURCES}
    ${EDITOR_SCENE_SOURCES} ${EDITOR_PLAYMODE_SOURCES} ${EDITOR_INPUT_SOURCES}
    ${EDITOR_DEBUG_SOURCES} ${EDITOR_DIALOGS_SOURCES}
)
set(EDITOR_HEADERS
    ${EDITOR_CORE_HEADERS} ${EDITOR_PANELS_HEADERS} ${EDITOR_UI_HEADERS}
    ${EDITOR_SCENE_HEADERS} ${EDITOR_PLAYMODE_HEADERS} ${EDITOR_INPUT_HEADERS}
    ${EDITOR_DEBUG_HEADERS} ${EDITOR_DIALOGS_HEADERS}
)

# Hollows game files for play mode
set(HOLLOWS_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/../Sandbox/Hollows/PlayerController.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/../Sandbox/Hollows/GameInitializer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/../Sandbox/Hollows/DebugLogic.cpp"
)
set(HOLLOWS_HEADERS
    "${CMAKE_CURRENT_SOURCE_DIR}/../Engine/Graphics/AnimationHelpers.hpp"
)

set(ALL_FILES ${EDITOR_SOURCES} ${EDITOR_HEADERS} ${HOLLOWS_SOURCES} ${HOLLOWS_HEADERS})

add_executable(Editor ${ALL_FILES})

# Link against the Engine library
target_link_libraries(Editor PRIVATE Engine)

set_property(TARGET Editor PROPERTY CXX_STANDARD 20)

# Include Hollows directory
target_include_directories(Editor PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../Sandbox/Hollows")

# Organize files in Visual Studio Solution Explorer
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${EDITOR_SOURCES} ${EDITOR_HEADERS})
# Keep Hollows external files in separate group
source_group("External\\Hollows" FILES ${HOLLOWS_SOURCES} ${HOLLOWS_HEADERS})

# Copy DLLs (Windows only)
if(WIN32)
    set(FMOD_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../lib/FMOD")
    add_custom_command(TARGET Editor POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_CURRENT_SOURCE_DIR}/../lib/Freetype/freetype.dll"
            "$<TARGET_FILE_DIR:Editor>"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${FMOD_LIB_DIR}/fmod.dll"
            "$<TARGET_FILE_DIR:Editor>"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${FMOD_LIB_DIR}/fmodstudio.dll"
            "$<TARGET_FILE_DIR:Editor>"
        COMMENT "Copying DLLs"
    )
endif()

# Copy assets to build directory
add_custom_command(TARGET Editor POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_CURRENT_SOURCE_DIR}/../Sandbox/assets"
        "${CMAKE_CURRENT_BINARY_DIR}/assets"
    COMMENT "Copying assets"
)
